--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,7 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
+*.png    binary
+
 tests/ export-ignore
 phpunit.xml.dist export-ignore
