Filter refactoring, added "Keep" filter

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
             "DeepCopy": "src/",
             "DeepCopyTest": "tests/"
 		}
-	}
+	},
+    "require-dev": {
+        "doctrine/collections": "1.*"
+    }
 }
