--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
             "DeepCopyTest": "tests/"
 		}
 	},
+    "require": {
+        "php": ">=5.4.0"
+    },
     "require-dev": {
         "doctrine/collections": "1.*"
     }
