--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,12 @@ language: php
 php:
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: hhvm
 
 before_script:
   - wget http://getcomposer.org/composer.phar
