--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,16 @@
     "homepage": "https://github.com/myclabs/DeepCopy",
     "license": "MIT",
     "autoload": {
-        "psr-0": {
-            "DeepCopy": "src/",
-            "DeepCopyTest": "tests/"
-        }
+        "psr-4": { "DeepCopy\\": "src/DeepCopy/" }
+    },
+    "autoload-dev": {
+        "psr-4": { "DeepCopyTest\\": "tests/DeepCopyTest/" }
     },
     "require": {
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "doctrine/collections": "1.*"
+        "doctrine/collections": "1.*",
+        "phpunit/phpunit": "~4.1"
     }
 }
