--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
   - hhvm
 
 matrix:
@@ -11,14 +12,14 @@ matrix:
     - php: hhvm
 
 install:
-  - composer install
+  - composer install -n
   - composer require "satooshi/php-coveralls:~1.0" --no-progress
 
 before_script:
   - mkdir -p build/logs
 
 script:
-  - phpunit --coverage-clover build/logs/clover.xml
+  - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
 after_script:
   - php vendor/bin/coveralls -v
