Enhance Travis build
- Add tests for PHP 7.1 and nightly builds
- Add tests for minimal version (PHP 5.4 with prefer lowest)
- Bound upper PHP version
- Install coveralls PHAR instead of requiring the dep
- Install dist dependency preferably to reduce the amount of data to download

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "psr-4": { "DeepCopyTest\\": "tests/DeepCopyTest/" }
     },
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4.0 <7.2"
     },
     "require-dev": {
         "doctrine/collections": "1.*",
