--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "psr-4": { "DeepCopyTest\\": "tests/DeepCopyTest/" }
     },
     "require": {
-        "php": ">=5.4.0 <7.2"
+        "php": ">=5.4.0"
     },
     "require-dev": {
         "doctrine/collections": "1.*",
