--- a/composer.json
+++ b/composer.json
@@ -3,19 +3,28 @@
     "type": "library",
     "description": "Create deep copies (clones) of your objects",
     "keywords": ["clone", "copy", "duplicate", "object", "object graph"],
-    "homepage": "https://github.com/myclabs/DeepCopy",
     "license": "MIT",
+
     "autoload": {
-        "psr-4": { "DeepCopy\\": "src/DeepCopy/" }
+        "psr-4": {
+            "DeepCopy\\": "src/DeepCopy/"
+        }
     },
     "autoload-dev": {
-        "psr-4": { "DeepCopyTest\\": "tests/DeepCopyTest/" }
+        "psr-4": {
+            "DeepCopyTest\\": "tests/DeepCopyTest/"
+        }
     },
+
     "require": {
         "php": ">=5.4.0"
     },
     "require-dev": {
         "doctrine/collections": "1.*",
         "phpunit/phpunit": "~4.1"
+    },
+
+    "config": {
+        "sort-packages": true
     }
 }
