--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 language: php
 
+sudo: false
+
 php:
   - '5.5'
   - '5.6'
   - '7.0'
   - '7.1'
   - nightly
-  - hhvm
 
 matrix:
   fast_finish: true
@@ -15,7 +16,10 @@ matrix:
       env: COMPOSER_FLAGS="--prefer-lowest"
   allow_failures:
     - php: nightly
-    - php: hhvm
+
+cache:
+  directories:
+    - $HOME/.composer/cache/files
 
 before_install:
   - |
@@ -24,7 +28,7 @@ before_install:
     fi;
 
 install:
-  - composer update -n --prefer-dist $COMPOSER_FLAGS
+  - composer update --no-interaction --no-progress --no-suggest --prefer-dist $COMPOSER_FLAGS
   - wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.0/coveralls.phar
 
 before_script:
