--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: php
 sudo: false
 
 php:
-  - '5.5'
   - '5.6'
   - '7.0'
   - '7.1'
@@ -12,7 +11,7 @@ php:
 matrix:
   fast_finish: true
   include:
-    - php: '5.4'
+    - php: '5.6'
       env: COMPOSER_FLAGS="--prefer-lowest"
   allow_failures:
     - php: nightly
@@ -23,7 +22,7 @@ cache:
 
 before_install:
   - |
-    if [ "$TRAVIS_PHP_VERSION" = "nightly" ] || "$TRAVIS_PHP_VERSION" = "7.1" ]; then
+    if [ "$TRAVIS_PHP_VERSION" = "nightly" ]; then
       COMPOSER_FLAGS="$COMPOSER_FLAGS --ignore-platform-reqs"
     fi;
 
