--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,13 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "DeepCopy\\": "fixtures/",
             "DeepCopyTest\\": "tests/DeepCopyTest/"
         }
     },
 
     "require": {
-        "php": ">=5.4.0"
+        "php": "^5.6.0"
     },
     "require-dev": {
         "doctrine/collections": "^1.0",
