--- a/composer.json
+++ b/composer.json
@@ -21,11 +21,11 @@
     },
 
     "require": {
-        "php": "^5.6.0"
+        "php": "^5.6 || ^7.0"
     },
     "require-dev": {
         "doctrine/collections": "^1.0",
-        "doctrine/common": "^2.8",
+        "doctrine/common": "^2.6",
         "phpunit/phpunit": "^4.1"
     },
 
