Update to PHPUnit 5

--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,16 @@
     "require-dev": {
         "doctrine/collections": "^1.0",
         "doctrine/common": "^2.6",
-        "phpunit/phpunit": "^4.8.35"
+        "phpunit/phpunit": "^5.7"
     },
 
     "config": {
         "sort-packages": true
+    },
+
+    "extra": {
+        "branch-alias": {
+            "dev-1.x": "1.x-dev"
+        }
     }
 }
