Config file needs complete config?

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,3 +2,18 @@ build:
     environment:
         variables:
             COMPOSER_ROOT_VERSION: '1.8.0'
+
+filter:
+    excluded_paths: [vendor/*, app/*, web/*]
+    
+before_commands:
+    - "composer install"
+
+tools:
+    php_cpd: true
+    php_pdepend:
+        excluded_dirs: [vendor]
+    php_loc: true
+    php_mess_detector: true
+    php_analyzer: true
+    php_code_coverage: true
