--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,13 +1,8 @@
-build:
-    environment:
-        variables:
-            COMPOSER_ROOT_VERSION: '1.8.0'
-
 filter:
     excluded_paths: [vendor/*, app/*, web/*]
     
 before_commands:
-    - "composer install"
+    - "COMPOSER_ROOT_VERSION=1.8.0 composer install"
 
 tools:
     php_cpd: true
