--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,7 +2,7 @@ filter:
     excluded_paths: [vendor/*, app/*, web/*]
     
 before_commands:
-    - "COMPOSER_ROOT_VERSION=1.8.0 composer install"
+    - COMPOSER_ROOT_VERSION=1.8.0 composer install
 
 tools:
     php_cpd: true
