--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
     "require-dev": {
         "doctrine/collections": "^1.0",
         "doctrine/common": "^2.6",
+        "phpstan/phpstan": "^0.9.2",
+        "phpstan/phpstan-phpunit": "^0.9.4",
         "phpunit/phpunit": "^7.1"
     },
     "replace": {
