--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,26 @@
 {
     "name": "myclabs/deep-copy",
-    "type": "library",
     "description": "Create deep copies (clones) of your objects",
-    "keywords": ["clone", "copy", "duplicate", "object", "object graph"],
     "license": "MIT",
-
+    "type": "library",
+    "keywords": [
+        "clone",
+        "copy",
+        "duplicate",
+        "object",
+        "object graph"
+    ],
+    "require": {
+        "php": "^7.1 || ^8.0"
+    },
+    "require-dev": {
+        "doctrine/collections": "^1.0",
+        "doctrine/common": "^2.6",
+        "phpunit/phpunit": "^7.1"
+    },
+    "replace": {
+        "myclabs/deep-copy": "self.version"
+    },
     "autoload": {
         "psr-4": {
             "DeepCopy\\": "src/DeepCopy/"
@@ -19,19 +35,6 @@
             "DeepCopyTest\\": "tests/DeepCopyTest/"
         }
     },
-
-    "require": {
-        "php": "^7.1 || ^8.0"
-    },
-    "require-dev": {
-        "doctrine/collections": "^1.0",
-        "doctrine/common": "^2.6",
-        "phpunit/phpunit": "^7.1"
-    },
-    "replace": {
-        "myclabs/deep-copy": "self.version"
-    },
-
     "config": {
         "sort-packages": true
     }
