--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
         "php": "^7.1 || ^8.0"
     },
     "require-dev": {
-        "doctrine/collections": "^1.0",
-        "doctrine/common": "^2.6",
-        "phpunit/phpunit": "^7.1"
+        "doctrine/collections": "^1.6",
+        "doctrine/common": "^2.13",
+        "phpunit/phpunit": "^7.5 || ^8.5 || ^9.5"
     },
     "autoload": {
         "psr-4": {
