--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "require-dev": {
         "doctrine/collections": "^1.6.8",
         "doctrine/common": "^2.13.3 || ^3.2.2",
-        "phpunit/phpunit": "^7.5.20 || ^8.5.23 || ^9.5.13"
+        "phpunit/phpunit": "^7.5.20 || ^8.5.23 || ^9.5.13",
+        "phpspec/prophecy": "^1.11"
     },
     "conflict": {
         "doctrine/collections": "<1.6.8",
